--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Escape room BHD21</title>
-        <link rel="stylesheet" type="text/css" href="_sass/general.css">
+        <link rel="stylesheet" type="text/css" href="general.css">
     </head>
     <body>
         Welcome back to a fresh new edition of Brainhack Donostia!
