--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </h1>
     <body>
         Welcome back to a fresh new edition of Brainhack Donostia!
-        jeje
+        jeje holi
     </body>
 </html>
