--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <title>Escape room BHD21</title>
         <link rel="stylesheet" type="text/css" href="general.css">
     </head>
-    <h1>
-        Escape room BHD21
-    </h1>
     <body>
-        Welcome back to a fresh new edition of Brainhack Donostia!
-        jeje holi
+        <h1>
+            Escape room BHD21
+        </h1>
+        <p>
+            Welcome back to a fresh new edition of Brainhack Donostia!
+            jeje holi jeje
+        </p>
     </body>
 </html>
