prueba hidden post

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
             Escape room BHD21
         </h1>
         <p>
-            Welcome back to a fresh new edition of Brainhack Donostia!
-            jeje holi jeje
+            Welcome to the fabulous escape room!
+            Aqui una breve historiera
+
+            Aqui algunas instrucciones.
+
+            Buena suerte pipiolos!
         </p>
     </body>
 </html>
