--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
         </h1>
         <p>
             Welcome to the fabulous escape room!
-            Aqui una breve historiera
-
-            Aqui algunas instrucciones.
-
+            Aqui una breve historiera <br>
+            Aqui algunas instrucciones.<br>
             Buena suerte pipiolos!
+
+            <form method="get" action="prueba_hidden_post">
+                <button type="submit">Continue</button>
+            </form>
         </p>
     </body>
 </html>
