--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             Welcome to the fabulous escape room!
             Aqui una breve historiera <br>
             Aqui algunas instrucciones.<br>
-            Buena suerte pipiolos!
+            Buena suerte pipiolos!besis
 
             <form method="get" action="prueba_hidden_post">
                 <button type="submit">Continue</button>
