--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             Aqui algunas instrucciones.<br>
             Buena suerte pipiolos!besis
 
-            <form method="get" action="prueba_hidden_post">
-                <button type="submit">Continue</button>
+            <form action="https://https://escape-room-bhd.github.io/prueba_hidden_post">
+                <input type="submit" value="Go to Google" />
             </form>
         </p>
     </body>
