--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             Aqui algunas instrucciones.<br>
             Buena suerte pipiolos!besis
 
-            <form action="https://https://escape-room-bhd.github.io/prueba_hidden_post">
+            <form href="/prueba_hidden_post.md">
                 <input type="submit" value="Go to Google" />
             </form>
         </p>
