--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             Aqui algunas instrucciones.<br>
             Buena suerte pipiolos!besis
 
-            <form action="/prueba_hidden_post.md">
+            <form action="https://escape-room-bhd.github.io/pesta%C3%B1a">
                 <input type="submit" value="Go to Google" />
             </form>
         </p>
