--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
         </h1>
         <p>
             Welcome to the fabulous escape room!
-            Aqui una breve historiera <br>
-            Aqui algunas instrucciones.<br>
+        </p>
+        <p>
+            Aqui la historia del sotano y RyC 
+        </p>
+        <p>
+            Aqui algunas instrucciones básicas: hay que resolver las pistas
+            en el tiempo dado. Todo se hace en esta web o con los links porporcionados.
+            Hay que introducir la contraseña correcta para que os lleve automáticamente
+            a la siguiente prueba. Si son numeros o letras irá indicado en cada prueba.
+            Hasta que no se os indique explicitamente, no volvais al gathertown.
+            Podeis pedir un máximo de 2 pistas por prueba. No podeis volver atrás, así
+            que aseguraros de apuntar/guardar lo indicado antes de clickar en 
+            continuar. Al darle a empezar, el contador se activará.
+        </p>
             Buena suerte pipiolos!besis
 
+            <a href="https://escape-room-bhd.github.io/pesta%C3%B1a">
+                <button class="button">Start</button>
+            </a>
+        <!--
             <form action="https://escape-room-bhd.github.io/pesta%C3%B1a">
                 <input type="submit" value="Go to Google" />
             </form>
+        -->
         </p>
     </body>
 </html>
