button style 2989018938 test

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             Buena suerte pipiolos!besis
         </p>
 
-        <a href="https://escape-room-bhd.github.io/pesta%C3%B1a">
-            <button class="button1">Start</button>
+        <a class="button1" href="https://escape-room-bhd.github.io/pesta%C3%B1a">
+            <button class="button2">Start</button>
         </a>
         <!--
             <form action="https://escape-room-bhd.github.io/pesta%C3%B1a">
