--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
             Welcome to the Brainhack Donostia Escape Room
         </p>
         <p>
-            As you should know, you are in the basement of the Miramar Palace. Do not loose your time trying to fool us. We know why you are here. If you ended up here, you were probably looking for the treasured well-preserved brain of the worldwide known Ramon y Cajal. You shouldn't be here. Did you really think we were going to allow you and your team to even touch such precious item? We won't. This basement has the newest security systems against thieves and nosy people like you. It is programmed to be locked until police arrive. Oh, you don't want to be caught by the police? Then, if you want to escape, we hope any of you has an exceptional brain - Ramon y Cajal level. Ha ha. 
+            As you should know, you are in the basement of the Miramar Palace. Do not loose your time trying to fool us. 
+            We know why you are here. If you ended up here, you were probably looking for the treasured well-preserved brain of the worldwide known Ramon y Cajal. 
+            You shouldn't be here. Did you really think we were going to allow you and your team to even touch such precious item? We won't. 
+            This basement has the newest security systems against thieves and nosy people like you. 
+            It is programmed to be locked until police arrive. Oh, you don't want to be caught by the police? 
+            Then, if you want to escape, we hope any of you has an exceptional brain - Ramon y Cajal level. Ha ha. 
         </p>
         <p>
-            Instructions: You will need to work with your team in order to solve the tasks within the given time. In order to succeed, you will need to introduce the right answer. If the answer contains letters, it will be indicated as XXXX; if the answer contains numbers, it will be indicated as - - - -. You can ask up to two clues per task. You will not be able to return to the previous page, so make sure to write down all the necessary things before continue. 
-            Aqui algunas instrucciones básicas: hay que resolver las pistas
-            en el tiempo dado. Todo se hace en esta web o con los links porporcionados.
-            Hay que introducir la contraseña correcta para que os lleve automáticamente
-            a la siguiente prueba. Si son numeros o letras irá indicado en cada prueba.
-            Hasta que no se os indique explicitamente, no volvais al gathertown.
-            Podeis pedir un máximo de 2 pistas por prueba. No podeis volver atrás, así
-            que aseguraros de apuntar/guardar lo indicado antes de clickar en 
-            continuar. Al darle a empezar, el contador se activará.
+            Instructions: You will need to work with your team in order to solve the tasks within the given time. 
+            In order to succeed, you will need to introduce the right answer. If the answer contains letters, it will be indicated as XXXX; 
+            if the answer contains numbers, it will be indicated as - - - -. You can ask up to two clues per task. 
+            You will not be able to return to the previous page, so make sure to write down all the necessary things before continue. 
+
         </p>
         <p>
             
