--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             Good luck. 
         </p>
 
-        <a href="https://escape-room-bhd.github.io/pesta%C3%B1a_RamonyCajal">
+        <a href="https://escape-room-bhd.github.io/Pesta%C3%B1a_RamonyCajal">
             <button class="button1">Start</button>
         </a>
         <!--
-            <form action="https://escape-room-bhd.github.io/pesta%C3%B1a_RamonyCajal">
+            <form action="https://escape-room-bhd.github.io/Pesta%C3%B1a_RamonyCajal">
                 <input type="submit" value="Go to Google" />
             </form>
         -->
