--- a/Nonograms.html
+++ b/Nonograms.html
@@ -5,7 +5,8 @@
         <style>
             .buttongroup{
                 float:left;
-                border: 2px solid green;
+                /*border: 2px solid green;*/
+                padding: 10px 22px;
             }
         </style>
     </head>
