--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -22,5 +22,6 @@
                  width="690" height="360">
         </p>
     </body>
-    <iframe src="https://eduescaperoom.com/enigma/4QVcm4qyMxwc" width="690px" height="360px"></iframe>
+    <iframe src="https://eduescaperoom.com/enigma/4IkpWn0rM5zN" width="690px" height="360px"></iframe>
+
 </html>
