--- a/Nonograms.html
+++ b/Nonograms.html
@@ -6,7 +6,8 @@
             .buttongroup{
                 float:left;
                 /*border: 2px solid green;*/
-                padding: 8px 18px;
+                font-size: 20px;
+                padding: 8px 10px;
             }
         </style>
     </head>
@@ -19,12 +20,12 @@
             Maybe the next password is encrypted with them...
         </p>
 
-        <a class="buttongroup" href="https://escape-room-bhd.github.io/pesta%C3%B1a">
-            <button class="button1">Ɉiϱib Ɉƨᛚ</button>
-            <button class="button1">2nd digit</button>
-            <button class="button1">ʇᴉɓᴉp pɹƐ</button>
-            <button class="button1">4th digit</button>
-            <button class="button1">5th digit</button>
+        <a class="buttongroup" >
+            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60603">Ɉiϱib Ɉƨᛚ</button>
+            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60604">2nd digit</button>
+            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60608">ʇᴉɓᴉp pɹƐ</button>
+            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60609">4th digit</button>
+            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/606010">5th digit</button>
 
         </a>
 
