--- a/Nonograms.html
+++ b/Nonograms.html
@@ -7,7 +7,7 @@
                 float:left;
                 /*border: 2px solid green;*/
                 font-size: 20px;
-                padding: 8px 10px;
+                padding: 2px 2px;
             }
         </style>
     </head>
@@ -21,7 +21,7 @@
         </p>
 
         <a class="buttongroup" >
-            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60603">Ɉiϱib Ɉƨᛚ</button>
+            <button class="button1" onclick=href href="https://nonograms.relaxpuzzles.com/nonogram/60603">Ɉiϱib Ɉƨᛚ</button>
             <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60604">2nd digit</button>
             <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60608">ʇᴉɓᴉp pɹƐ</button>
             <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60609">4th digit</button>
