--- a/Nonograms.html
+++ b/Nonograms.html
@@ -21,7 +21,7 @@
         </p>
 
         <a class="buttongroup" >
-            <button class="button1" onclick=href href="https://nonograms.relaxpuzzles.com/nonogram/60603">Ɉiϱib Ɉƨᛚ</button>
+            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60603'">Ɉiϱib Ɉƨᛚ</button>
             <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60604">2nd digit</button>
             <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60608">ʇᴉɓᴉp pɹƐ</button>
             <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60609">4th digit</button>
