--- a/Nonograms.html
+++ b/Nonograms.html
@@ -8,6 +8,7 @@
                 /*border: 2px solid green;*/
                 font-size: 20px;
                 padding: 2px 2px;
+                background-color: rgb(26, 85, 153);
             }
         </style>
     </head>
