--- a/Nonograms.html
+++ b/Nonograms.html
@@ -5,10 +5,8 @@
         <style>
             .buttongroup{
                 float:left;
-                /*border: 2px solid green;*/
-                font-size: 20px;
-                padding: 2px 2px;
-                background-color: rgb(26, 85, 153);
+                border: 2px solid green;
+               
             }
         </style>
     </head>
@@ -22,11 +20,11 @@
         </p>
 
         <a class="buttongroup" >
-            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60603'">Ɉiϱib Ɉƨᛚ</button>
-            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60604">2nd digit</button>
-            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60608">ʇᴉɓᴉp pɹƐ</button>
-            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60609">4th digit</button>
-            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/606010">5th digit</button>
+            <button class="button1" onclick="location.href='window.open(https://nonograms.relaxpuzzles.com/nonogram/60603)'">Ɉiϱib Ɉƨᛚ</button>
+            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60604'">2nd digit</button>
+            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60608'">ʇᴉɓᴉp pɹƐ</button>
+            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60609'">4th digit</button>
+            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/606010'">5th digit</button>
 
         </a>
 
