--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -29,7 +29,7 @@
 # Puedes cambiar el usuario y clave x lo q sea
 $password = '513212';
 # Aqui compruebo q los datos(usuario y contraseña) ingresados sean igual a lo que eh definido
-if(trim($_POST['pass'])==$clave) {
+if(trim($_POST['pass'])==$password) {
 header('Location: https://escape-room-bhd.github.io/Nonograms');
  }else{
 header('Location: Error.html');
