--- a/Nonograms.html
+++ b/Nonograms.html
@@ -20,7 +20,7 @@
         </p>
 
         <a class="buttongroup" >
-            <button class="button1" onclick="location.href='window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')'">Ɉiϱib Ɉƨᛚ</button>
+            <button href="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')" class="button1" >Ɉiϱib Ɉƨᛚ</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60604'">2nd digit</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60608'">ʇᴉɓᴉp pɹƐ</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60609'">4th digit</button>
