--- a/Nonograms.html
+++ b/Nonograms.html
@@ -5,7 +5,7 @@
         <style>
             .buttongroup{
                 float:left;
-                border: 2px solid green;
+                /*border: 2px solid green;*/
                
             }
         </style>
