--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </p>
 
         <a href="https://escape-room-bhd.github.io/Pesta%C3%B1a_RamonyCajal">
-            <button class="button1">Start</button>
+            <center><button class="button1">Start</button></center>
         </a>
         <!--
             <form action="https://escape-room-bhd.github.io/Pesta%C3%B1a_RamonyCajal">
