--- a/Nonograms.html
+++ b/Nonograms.html
@@ -5,7 +5,7 @@
         <style>
             .buttongroup{
                 float:left;
-                /*border: 2px solid green;*/
+                border: 2px solid green;
                
             }
         </style>
@@ -21,7 +21,7 @@
 
         <a class="buttongroup" >
             <button href="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')" class="button1" >Ɉiϱib Ɉƨᛚ</button>
-            <button class="button1" href="https://nonograms.relaxpuzzles.com/nonogram/60604"target="_blank">2nd digit</button>
+            <button href="https://nonograms.relaxpuzzles.com/nonogram/60604"target="_blank" class="button1">2nd digit</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60608'">ʇᴉɓᴉp pɹƐ</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60609'">4th digit</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/606010'">5th digit</button>
