--- a/Nonograms.html
+++ b/Nonograms.html
@@ -19,7 +19,9 @@
             Maybe the next password is encrypted with them...
         </p>
 
+        <button href="https://nonograms.relaxpuzzles.com/nonogram/60604" target="_blank" rel="noopener noreferrer">Link</button>
         <a class="buttongroup" >
+            
             <button href="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')" class="button1" >Ɉiϱib Ɉƨᛚ</button>
             <button href="https://nonograms.relaxpuzzles.com/nonogram/60604"target="_blank" class="button1">2nd digit</button>
             <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60608'">ʇᴉɓᴉp pɹƐ</button>
