--- a/Nonograms.html
+++ b/Nonograms.html
@@ -19,6 +19,9 @@
             Maybe the next password is encrypted with them...
         </p>
 
+        <input type="button" value="Open Window"
+        onclick="window.open('http://www.domain.com')">
+
         <button href="https://nonograms.relaxpuzzles.com/nonogram/60604" target="_blank" rel="noopener noreferrer">Link</button>
         <a class="buttongroup" >
             
