--- a/Nonograms.html
+++ b/Nonograms.html
@@ -19,17 +19,13 @@
             Maybe the next password is encrypted with them...
         </p>
 
-        <input type="button" value="Open Window"
-        onclick="window.open('http://www.domain.com')">
-
-        <button href="https://nonograms.relaxpuzzles.com/nonogram/60604" target="_blank" rel="noopener noreferrer">Link</button>
+        
         <a class="buttongroup" >
-            
-            <button href="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')" class="button1" >Ɉiϱib Ɉƨᛚ</button>
-            <button href="https://nonograms.relaxpuzzles.com/nonogram/60604"target="_blank" class="button1">2nd digit</button>
-            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60608'">ʇᴉɓᴉp pɹƐ</button>
-            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/60609'">4th digit</button>
-            <button class="button1" onclick="location.href='https://nonograms.relaxpuzzles.com/nonogram/606010'">5th digit</button>
+            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')">
+            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60604','_blank')">
+            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60608','_blank')">
+            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60609','_blank')">
+            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/606010','_blank')">
 
         </a>
 
