--- a/Nonograms.html
+++ b/Nonograms.html
@@ -5,7 +5,9 @@
         <style>
             .buttongroup{
                 float:left;
-                border: 2px solid green;
+                /*border: 2px solid green;*/
+                font-size: 14px;
+                padding: 0px 0px;
                
             }
         </style>
