--- a/Nonograms.html
+++ b/Nonograms.html
@@ -22,12 +22,13 @@
         </p>
 
         
+        <button href="https://nonograms.relaxpuzzles.com/nonogram/60604" target="_blank" rel="noopener noreferrer">Link</button>
         <a class="buttongroup" >
-            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')">
-            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60604','_blank')">
-            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60608','_blank')">
-            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60609','_blank')">
-            <input type="button" class="button1" value="Open Window" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/606010','_blank')">
+            <input type="button" class="button1" value="Ɉiϱib Ɉƨᛚ" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60603','_blank')">
+            <input type="button" class="button1" value="2nd digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60604','_blank')">
+            <input type="button" class="button1" value="ʇᴉɓᴉp pɹƐ" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60608','_blank')">
+            <input type="button" class="button1" value="4th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60609','_blank')">
+            <input type="button" class="button1" value="5th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60610','_blank')">
 
         </a>
 
