--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -23,33 +23,12 @@
         </p>
     </body>
 
-   <?php
- if(($_POST)){
-# Aqui definimos el usuario y password
-# Puedes cambiar el usuario y clave x lo q sea
-$password = '513212';
-# Aqui compruebo q los datos(usuario y contraseña) ingresados sean igual a lo que eh definido
-if(trim($_POST['pass'])==$password) {
-header('Location: https://escape-room-bhd.github.io/Nonograms');
- }else{
-header('Location: Error.html');
- }
-   }
-
-?>
-<html>
-<head>
-<title>Acceso</title>
-</head>
-<body>
-<form action="" method="post">
-<table border="1" cellpadding="5" cellspacing="0" align="center">
-<tr><td colspan="2" align="center">ACCESO</td></tr>
-<tr><td>Password:</td> <td><input type="password" name="pass" /></td></tr>
-<tr><td align="center" colspan="2"><input type="submit" name="submit" value="Submit" /></td></tr>
-</table>
-</form>
-</body>
-</html>
+    <div class="grid-item" style="grid-area: 3/1/span 1/span 2">
+            <input type="text" id="n1">
+            <div style="display: block; height: 15px;"></div>
+            <div>
+                <input class="send-button" type="button" onclick="onClick();"/>
+            </div>
+        </div>
  
 </html>
