--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -2,6 +2,7 @@
     <head>
         <title>Escape room BHD21</title>
         <link rel="stylesheet" type="text/css" href="general.css">
+        <script type="text/javascript" src="codigojava.js"></script>
     </head>
     <body>
         <h1>
