--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -23,11 +23,11 @@
         </p>
     </body>
 
-    <div class="grid-item" style="grid-area: 3/1/span 1/span 2">
+        <div >
             <input type="text" id="n1">
             <div style="display: block; height: 15px;"></div>
             <div>
-                <input class="send-button" type="button" onclick="onClick();"/>
+                <input class="button1" type="button" onclick="onClick();"/>
             </div>
         </div>
  
