--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -1,35 +1,35 @@
-<html>
-    <head>
-        <title>Escape room BHD21</title>
-        <link rel="stylesheet" type="text/css" href="general.css">
-        <script type="text/javascript" src="codigojava.js"></script>
-    </head>
-    <body>
-        <h1>
-            Ramon y Cajal
-        </h1>
-        <p>
-            So, you were looking for Ramon y Cajal's brain, right? We guess you are familiar with the following images.
-        <p> 
-            Oh, you aren't? Then, you will have to use your wits to solve this test.
-            
-            <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.09.png?raw=true"
-                 width="690" height="360">
-            <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.23.png?raw=true"
-                 width="690" height="360">
-            <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.45.png?raw=true"
-                 width="690" height="360">
-            <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.02.07.png?raw=true"
-                 width="690" height="360">
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
 
-        <div >
-            <input type="text" id="n1">
-            <div style="display: block; height: 15px;"></div>
-            <div>
-                <input class="button1" type="button" onclick="onClick();"/>
-            </div>
-        </div>
- 
+<head>
+    <title>Escape room BHD21</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="general.css">
+    <script type="text/javascript" src="codigojava.js"></script>
+</head>
+
+<body>
+    <h1>
+        Ramon y Cajal
+    </h1>
+    <p>
+        So, you were looking for Ramon y Cajal's brain, right? We guess you are familiar with the following images.
+    <p>
+        Oh, you aren't? Then, you will have to use your wits to solve this test.
+
+        <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.09.png?raw=true"
+            width="690" height="360">
+        <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.23.png?raw=true"
+            width="690" height="360">
+        <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.45.png?raw=true"
+            width="690" height="360">
+        <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.02.07.png?raw=true"
+            width="690" height="360">
+    </p>
+    <form id="ramon-cajal-test" class="form-default" onsubmit="checkTestAnswer()">
+        <input type="text" id="n1">
+        <button class="button1" type="submit">Continue</button>
+    </form>
+</body>
+
 </html>
