--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -28,7 +28,7 @@
     </p>
     <form id="ramon-cajal-test" class="form-default" onsubmit="checkTestAnswer()">
         <input type="text" id="n1">
-        <button class="button1" type="submit">Continue</button>
+        <button class="button1" type="submit">X X X X X X</button>
     </form>
 </body>
 
