update nonograms- button

--- a/Nonograms.html
+++ b/Nonograms.html
@@ -28,6 +28,10 @@
             <input type="button" class="button1" value="4th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60609','_blank')">
             <input type="button" class="button1" value="5th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60610','_blank')">
 
+        <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
+        <input type="text" id="n2">
+        <button class="button1" type="submit">-----</button>
+    </form>
         </a>
 
 
