--- a/Nonograms.html
+++ b/Nonograms.html
@@ -2,7 +2,7 @@
     <head>
         <title>Escape room BHD21</title>
         <link rel="stylesheet" type="text/css" href="general.css">
-        <script type="text/javascript" src="codigojava.js"></script>
+        <script type="text/javascript" src="codigojavanono.js"></script>
         <style>
             .buttongroup{
                 float:left;
@@ -30,7 +30,7 @@
             <input type="button" class="button1" value="5th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60610','_blank')">
 
         <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
-        <input type="text" id="n2">
+        <input type="text" id="n1">
         <button class="button1" type="submit">-----</button>
     </form>
         </a>
