--- a/Nonograms.html
+++ b/Nonograms.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Escape room BHD21</title>
         <link rel="stylesheet" type="text/css" href="general.css">
@@ -13,6 +14,7 @@
             }
         </style>
     </head>
+    
     <body>
         <h1>
             Another kind of drawing
@@ -28,13 +30,12 @@
             <input type="button" class="button1" value="ʇᴉɓᴉp pɹƐ" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60608','_blank')">
             <input type="button" class="button1" value="4th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60609','_blank')">
             <input type="button" class="button1" value="5th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60610','_blank')">
-
-        <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
-        <input type="text" id="n1">
-        <button class="button1" type="submit">-----</button>
-    </form>
         </a>
 
+        <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
+              <input type="text" id="n1">
+              <button class="button1" type="submit">-----</button>
+        </form>
 
     </body>
 </html>
