--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Escape room BHD21</title>
+        <style>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="general.css">
     </head>
     <body>
