--- a/Nonograms.html
+++ b/Nonograms.html
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="codigojavanono.js"></script>
         <style>
             .buttongroup{
-                float:left;
+                float:center;
                 /*border: 2px solid green;*/
                 font-size: 14px;
                 padding: 0px 0px;
