--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -13,10 +13,9 @@
         Ramon y Cajal
     </h1>
     <p>
-        So, you were looking for Ramon y Cajal's brain, right? We guess you are familiar with the following images.
+        So, you were looking for Ramon y Cajal's brain, right? We guess you are familiar with the following images. Oh, you aren't? Then, you will have to use your wits to solve this test.
+    </p>
     <p>
-        Oh, you aren't? Then, you will have to use your wits to solve this test.
-
         <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.09.png?raw=true"
             width="690" height="360">
         <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.23.png?raw=true"
@@ -26,9 +25,12 @@
         <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.02.07.png?raw=true"
             width="690" height="360">
     </p>
+    <p>
+    PASSWORD : X X X X X X
+    </p>
     <form id="ramon-cajal-test" class="form-default" onsubmit="checkTestAnswer()">
         <input type="text" id="n1">
-        <button class="button1" type="submit">X X X X X X</button>
+        <button class="button1" type="submit">SEND</button>
     </form>
 </body>
 
