--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             Escape room BHD21
         </h1>
         <p1>
-            Welcome to the Brainhack Donostia Escape Room
+            Welcome little brain hackers
         </p1>
         <p>
 
