--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             Then, if you want to escape, we hope any of you has an exceptional brain - Ramon y Cajal level. Ha ha. 
         </p>
         <pinst>
+            
             You will need to work with your team in order to solve the tasks within the given time. 
             In order to succeed, you will need to introduce the right answer.  
 
         </pinst>
         <pinst>
-            If the answer contains letters, it will be indicated as XXXX; 
-            if the answer contains numbers, it will be indicated as - - - -. You can ask up to two clues per task. 
-            You will not be able to return to the previous page, so make sure to write down all the necessary things before continuing. 
+            
+            If the answer contains letters, it will be indicated as XXXX; if the answer contains numbers, it will be indicated as - - - -. You can ask up to two clues per task. You will not be able to return to the previous page, so make sure to write down all the necessary things before continuing. 
   
         </pinst>
         <p1>
