--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -16,18 +16,18 @@
         So, you were looking for Ramon y Cajal's brain, right? We guess you are familiar with the following images. Oh, you aren't? Then, you will have to use your wits to solve this test.
     </p>
     <p1>
-        <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.09.png?raw=true"
+        <center><img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.09.png?raw=true"
             width="690" height="360">
         <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.23.png?raw=true"
             width="690" height="360">
         <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.45.png?raw=true"
             width="690" height="360">
         <img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.02.07.png?raw=true"
-            width="690" height="360">
+            width="690" height="360"></center>
     </p1>
-    <p1>
+    <center><p1>
     PASSWORD : X X X X X X
-    </p1>
+        </p1></center>
     <form id="ramon-cajal-test" class="form-default" onsubmit="checkTestAnswer()">
         <input type="text" id="n1">
         <button class="button1" type="submit">SEND</button>
