--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
             In order to succeed, you will need to introduce the right answer.  
 
         </pinst>
-        <pinst>
+        <justified><pinst>
             
-            If the answer contains letters, it will be indicated as XXXX; if the answer contains numbers, it will be indicated as - - - -. You can ask up to two clues per task. You will not be able to return to the previous page, so make sure to write down all the necessary things before continuing. 
+            If the answer contains letters, it will be indicated as XXXX; if the answer contains numbers, it will be indicated as - - - -. 
+            You can ask up to two clues per task. You will not be able to return to the previous page, 
+            so make sure to write down all the necessary things before continuing. 
   
-        </pinst>
+            </pinst></justified>
         
         <center><p1>
             <br>
