--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -35,8 +35,8 @@
         <button class="button1" type="submit">SEND</button>
         <br>
     </form>
-    <button type="button" onclick="alert('Have you noticed that some letters have been circled? How many?')">Clue 1</button>
-    <button type="button" onclick="alert('Easy peasy, could you order them alphabetically?')">Clue 2</button>
+    <button type="button2" onclick="alert('Have you noticed that some letters have been circled? How many?')">Clue 1</button>
+    <button type="button2" onclick="alert('Easy peasy, could you order them alphabetically?')">Clue 2</button>
  
 </body>
 
