--- a/Nonograms.html
+++ b/Nonograms.html
@@ -30,11 +30,15 @@
             <input type="button" class="button1" value="ʇᴉɓᴉp pɹƐ" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60608','_blank')">
             <input type="button" class="button1" value="4th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60609','_blank')">
             <input type="button" class="button1" value="5th digit" onclick="window.open('https://nonograms.relaxpuzzles.com/nonogram/60610','_blank')">
+            <br>
         </a>
-
+        <center><p1>
+        <br>
+        PASSWORD : - - - - -
+        </p1></center>
         <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
               <input type="text" id="n1">
-              <button class="button1" type="submit">-----</button>
+              <button class="button1" type="submit">SEND</button>
         </form>
 
     </body>
