update button y contraseña

--- a/Nonograms.html
+++ b/Nonograms.html
@@ -39,7 +39,11 @@
         <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
               <input type="text" id="n1">
               <button class="button1" type="submit">SEND</button>
+            <br>
         </form>
-
+        
+        <button class="button2" onclick="alert('aquí tienes que escribir algo Inés')">Clue 1</button>
+        <button class="button2" onclick="alert('Aquí tienes que escribir otro algo Inés')">Clue 2</button>
+ 
     </body>
 </html>
