--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </p1></center>
         <p>
 
-            As you should know, you are in the basement of the Miramar Palace. Do not loose your time trying to fool us. 
+            As you should know, you are in the basement of the Miramar Palace. Do not lose your time trying to fool us. 
             We know why you are here. If you ended up here, you were probably looking for the treasured well-preserved brain of the worldwide known Ramon y Cajal. 
             You shouldn't be here. Did you really think we were going to allow you and your team to even touch such precious item? We won't. 
         </p>
