--- a/Nonograms.html
+++ b/Nonograms.html
@@ -34,7 +34,7 @@
         </a>
         <center><p1>
         <br>
-        PASSWORD : - - - - -
+        PASSWORD (lowercase only) : - - - - -
         </p1></center>
         <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
               <input type="text" id="n1">
@@ -42,8 +42,8 @@
             <br>
         </form>
         
-        <button class="button2" onclick="alert('aquí tienes que escribir algo Inés')">Clue 1</button>
-        <button class="button2" onclick="alert('Aquí tienes que escribir otro algo Inés')">Clue 2</button>
+        <button class="button2" onclick="alert('Click on the buttons for each digit of the password, each one takes you to a different nonogram. Did you try to solve them?')">Clue 1</button>
+        <button class="button2" onclick="alert('Pay attention to the text in each caption... Does the digit from th enonogram makes sense with the same transformation?')">Clue 2</button>
  
     </body>
 </html>
