--- a/Nonograms.html
+++ b/Nonograms.html
@@ -43,7 +43,7 @@
         </form>
         
         <button class="button2" onclick="alert('Click on the buttons for each digit of the password, each one takes you to a different nonogram. Did you try to solve them?')">Clue 1</button>
-        <button class="button2" onclick="alert('Pay attention to the text in each caption... Does the digit from th enonogram makes sense with the same transformation?')">Clue 2</button>
+        <button class="button2" onclick="alert('Pay attention to the text in each caption... Does the digit from the nonogram make sense with the same transformation?')">Clue 2</button>
  
     </body>
 </html>
