--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -29,7 +29,9 @@
         <button class="button1" type="submit">SEND</button>
         <br>
     </form>
-    <button class="button2" onclick="alert('Oh please, don't even try typing 101214. he he.')">Clue 1</button>
+    
+    <button class="button2" onclick="alert('Oh please, don't even try typing 101214. he he')">Clue 1</button>
+    
     <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
  
 </body>
