--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -16,7 +16,7 @@
     We can't believe you made it up to here... But hey, don't get your hopes up because now it's getting tough. Let's see how you solve this!
     </p>
     <p1>
-        <center><img src="https://github.com/Escape-Room-BHD/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-15%20a%20las%2018.36.50.png"
+        <center><img src="Captura de pantalla 2021-11-15 a las 18.36.50.png"
             width="780" height="390"></center>
     </p1>
 
@@ -30,8 +30,9 @@
         <br>
     </form>
     
+
     <button class="button2" onclick="alert('Oh please, don't even try typing 101214. he he')">Clue 1</button>
-    
+
     <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
  
 </body>
