--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -16,10 +16,9 @@
     We can't believe you made it up to here... But hey, don't get your hopes up because now it's getting tough. Let's see how you solve this!
     </p>
     <p1>
-        <center><img src="Captura de pantalla 2021-11-15 a las 18.36.50.png"
-            width="780" height="390"></center>
+        <center><img src="Captura de pantalla 2021-11-15 a las 18.36.50.png"></center>
     </p1>
-
+<!-- width="780" height="390" -->
     <center><p1>
      <br>
     PASSWORD : X X X
