Button and clues

--- a/GoogleMaps.html
+++ b/GoogleMaps.html
@@ -3,7 +3,7 @@
     <head>
         <title>Escape room BHD21</title>
         <link rel="stylesheet" type="text/css" href="general.css">
-        <script type="text/javascript" src="codigojavanono.js"></script>
+        <script type="text/javascript" src="googlejava.js"></script>
         <style>
             .buttongroup{
                 float:center;
@@ -40,16 +40,16 @@
 
         <center><p1>
         <br>
-        PASSWORD (lowercase only) : - - - - -
+        PASSWORD : X X X X X X
         </p1></center>
-        <form id="nonogram-test" class="form-default" onsubmit="checkTestAnswer()">
+        <form id="google-test" class="form-default" onsubmit="checkTestAnswer()">
               <input type="text" id="n1">
               <button class="button1" type="submit">SEND</button>
             <br>
         </form>
         
-        <button class="button2" onclick="alert('Click on the buttons for each digit of the password, each one takes you to a different nonogram. Did you try to solve them?')">Clue 1</button>
-        <button class="button2" onclick="alert('Pay attention to the text in each caption... Does the digit from th enonogram makes sense with the same transformation?')">Clue 2</button>
+        <button class="button2" onclick="alert('Are you looking the map? how are you going to admire the places that way?! Use the street view please!')">Clue 1</button>
+        <button class="button2" onclick="alert('The password is numeric, right? Have you looked for numbers at the coordinates indicated on the buildings mentioned?')">Clue 2</button>
  
     </body>
 </html>
