--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -29,10 +29,9 @@
         <br>
     </form>
     
-    <button class="button2" onclick="alert('Oh please, don't even try typing 101214 he he')">Malditacluequenoseabre</button>
-
     <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
- 
+    <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
+<!-- Oh please, don't even try typing 101214 he he --> 
 </body>
 
 </html>
