--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -29,7 +29,7 @@
         <br>
     </form>
     
-    <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
+    <button class="button2" onclick="alert('Oh please, don't even try typing 101214 he he, give it another go!')">Clue 1</button>
     <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
 <!-- Oh please, don't even try typing 101214 he he --> 
 </body>
