--- a/Binary.html
+++ b/Binary.html
@@ -20,7 +20,8 @@
             Almost there...
         </h1>
         <p>
-            Feels good to make some tourism, right? 
+            Feels good to do some sightseeing, right? But now back to your computers, this is a BrainHack after all... Do you even remember binary coding? Oh you don't? Don't worry, 
+            we are here to refresh your memory he he.
         </p>
       
         <p> #1 Hotel Londres: Beatiful place to stay with fantastic views to La Concha beach, with a nice restaurant and even a Bingo!
