--- a/GoogleMaps.html
+++ b/GoogleMaps.html
@@ -2,17 +2,9 @@
 <html lang="en">
     <head>
         <title>Escape room BHD21</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="general.css">
         <script type="text/javascript" src="googlejava.js"></script>
-        <style>
-            .buttongroup{
-                float:center;
-                /*border: 2px solid green;*/
-                font-size: 14px;
-                padding: 300px;
-               
-            }
-        </style>
     </head>
     
     <body>
@@ -29,10 +21,14 @@
             <br>
             43.31829,-1.9848525
             <br>
+        </p>
+        <p>
             #2 Kursaal: Palace of congress and auditorium. There is always an event there!
             <br>
             43.3240253,-1.9786397
             <br>
+        </p>
+        <p>
             #3 BCBL building: Where the magic happens ;)
             <br>
             43.2945781,-1.9864628
