--- a/Binary.html
+++ b/Binary.html
@@ -3,7 +3,7 @@
     <head>
         <title>Escape room BHD21</title>
         <link rel="stylesheet" type="text/css" href="general.css">
-        <script type="text/javascript" src="googlejava.js"></script>
+        <script type="text/javascript" src="binaryjava.js"></script>
     </head>
     
     <body>
@@ -16,7 +16,7 @@
         </p>
       
         <p> 
-            <center><img src="https://github.com/Escape-Room-BHD/Escape-Room-BHD.github.io/blob/main/binary_img.png"
+            <center><img src="binary_img.png"
             width="690" height="360">
         </p>
 
