--- a/Binary.html
+++ b/Binary.html
@@ -31,8 +31,8 @@
         </form>
         
         <button class="button2" onclick="alert('yep, you have to start by converting those numbers to binary')">Clue 1</button>
-        <button class="button2" onclick="alert('Maybe you don't have to directly put the numbers in a binary conversion... maybe is another kind of code... maybe the
-                                         numbers indicate let's say, the position of the 1s')">Clue 2</button>
+        <button class="button2" onclick="alert('Maybe you don´t have to directly put the numbers in a binary conversion... maybe is another kind of code... maybe the
+                                         numbers indicate let´s say, the position of the 1s')">Clue 2</button>
  
     </body>
 </html>
