--- a/Final.html
+++ b/Final.html
@@ -13,9 +13,9 @@
             Wow, unbelievable! You solved all the challenges and therefore, here you are your so longed-for key:
         </p>
       
-        <p style= "font-weight:bold, font-size:30px"> 
+        <center><p style="font-weight:bold; font-size:30px"> 
             CONGRATS_ER_BHD21
-        </p>
+        </p></center>
 
         <p>
             Please, go back to GatherTown and introduce this password to open the blocked door. And have at hand the instructions we gave you after each test, you'll need them to succeed your escape.
