--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -29,8 +29,8 @@
         <br>
     </form>
     
-    <button class="button2" onclick="alert('Really? 101214? Come on...')">Clue 1</button>
-    <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button>
+    <left><button class="button2" onclick="alert('Really? 101214? Come on...')">Clue 1</button>
+    <button class="button2" onclick="alert('We told you this was going to be hard. Mathematics are a language, yes, what if you write the words instead of the numbers?')">Clue 2</button></left>
 <!-- Oh please, don't even try typing 101214 he he --> 
 </body>
 
