--- a/Binary.html
+++ b/Binary.html
@@ -31,7 +31,7 @@
         </form>
         
         <button class="button2" onclick="alert('yep, you have to start by converting those numbers to binary')">Clue 1</button>
-        <button class="button2" onclick="alert('yep, you have to start by converting those numbers to binary')">Clue 2</button>
+        <button class="button2" onclick="alert('Maybe, you do not need to convert the numbers in a binary conversion. Maybe, it is another kind of code. Maybe, the numbers indicate the positions of the 1s')">Clue 2</button>
 
  <!--Maybe you dont have to directly put the numbers in a binary conversion. Maybe is another kind of code. Maybe the
                                          numbers indicate lets say, the position of the 1s -->
