--- a/Binary.html
+++ b/Binary.html
@@ -23,12 +23,14 @@
         <center><p1>
         <br>
         PASSWORD (lowercase only): - - - - - -
-        </p1></center>
-        <form id="binary-test" class="form-default" onsubmit="checkTestAnswer()">
-              <input type="text" id="n1">
-              <button class="button1" type="submit">SEND</button>
             <br>
-        </form>
+        </p1></center>
+        <form id="Binary-test" class="form-default" onsubmit="checkTestAnswer()">
+        <input type="text" id="n1">
+        <button class="button1" type="submit">SEND</button>
+        <br>
+    </form>
+       
         
         <button class="button2" onclick="alert('yep, you have to start by converting those numbers to binary')">Clue 1</button>
         <button class="button2" onclick="alert('Maybe, you do not need to convert the numbers in a binary conversion. Maybe, it is another kind of code. Maybe, the numbers indicate the positions of the 1s')">Clue 2</button>
