--- a/Binary.html
+++ b/Binary.html
@@ -26,14 +26,14 @@
             <br>
         </p1></center>
         <form id="Binary-test" class="form-default" onsubmit="checkTestAnswer()">
-        <input type="text" id="n1">
-        <button class="button1" type="submit">SEND</button>
+            <input type="text" id="n1">
+            <button class="button1" type="submit">SEND</button>
         <br>
-    </form>
+       </form>
        
         
-        <button class="button2" onclick="alert('yep, you have to start by converting those numbers to binary')">Clue 1</button>
-        <button class="button2" onclick="alert('Maybe, you do not need to convert the numbers in a binary conversion. Maybe, it is another kind of code. Maybe, the numbers indicate the positions of the 1s')">Clue 2</button>
+        <left><button class="button2" onclick="alert('yep, you have to start by converting those numbers to binary')">Clue 1</button>
+        <button class="button2" onclick="alert('Maybe, you do not need to convert the numbers in a binary conversion. Maybe, it is another kind of code. Maybe, the numbers indicate the positions of the 1s')">Clue 2</button></left>
 
  <!--Maybe you dont have to directly put the numbers in a binary conversion. Maybe is another kind of code. Maybe the
                                          numbers indicate lets say, the position of the 1s -->
