--- a/Binary.html
+++ b/Binary.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Escape room BHD21</title>
-        <link rel="stylesheet" type="text/css" href="general.css">
-        <script type="text/javascript" src="binaryjava.js"></script>
-    </head>
-    
+    <title>Escape room BHD21</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="general.css">
+    <script type="text/javascript" src="binaryjava.js"></script>
+</head>
     <body>
         <h1>
             Almost there...
         </h1>
         <p>
             Feels good to do some sightseeing, right? But now back to your computers, this is a BrainHack after all... Do you even remember binary coding? Oh you don't? Don't worry, 
-            we are here to refresh your memory he he.
+            we are here to refresh your memory he he. WOWOWOWOWO
         </p>
       
         <p> 
