--- a/Binary.html
+++ b/Binary.html
@@ -5,7 +5,7 @@
     <title>Escape room BHD21</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="general.css">
-    <script type="text/javascript" src="binaryjava.js"></script>
+    <script type="text/javascript" src="javahemisphere.js"></script>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     </h1>
     <p>
 Feels good to do some sightseeing, right? But now back to your computers, this is a BrainHack after all... Do you even remember binary coding? Oh you don't? Don't worry, 
-            we are here to refresh your memory he he.    f
+            we are here to refresh your memory he he.    l
     </p>
     <p1>
         <center><img src="binary_img.png"
