--- a/Binary.html
+++ b/Binary.html
@@ -14,7 +14,7 @@
     </h1>
     <p>
 Feels good to do some sightseeing, right? But now back to your computers, this is a BrainHack after all... Do you even remember binary coding? Oh you don't? Don't worry, 
-            we are here to refresh your memory he he.    l
+            we are here to refresh your memory he he.    x
     </p>
     <p1>
         <center><img src="binary_img.png"
@@ -24,7 +24,7 @@ Feels good to do some sightseeing, right? But now back to your computers, this i
         PASSWORD (lowercase only): - - - - - -
         </p1></center>
     
-    <form id="Binary-test" class="form-default" onsubmit="checkTestAnswer()">
+    <form id="maths-test" class="form-default" onsubmit="checkTestAnswer()">
         <input type="text" id="n1">
         <button class="button1" type="submit">SEND</button>
         <br>
