--- a/Binary.html
+++ b/Binary.html
@@ -14,7 +14,7 @@
     </h1>
     <p>
 Feels good to do some sightseeing, right? But now back to your computers, this is a BrainHack after all... Do you even remember binary coding? Oh you don't? Don't worry, 
-            we are here to refresh your memory he he.    caca
+            we are here to refresh your memory he he.   
     </p>
     <p1>
         <center><img src="binary_img.png"
