--- a/Final.html
+++ b/Final.html
@@ -22,7 +22,7 @@
             Good luck!
         </p>
         
-        <iframe src="https://gifer.com/embed/7WnI" width=480 height=440.816 frameBorder="0" allowFullScreen></iframe>
+        <center><iframe src="https://gifer.com/embed/7WnI" width=460 height=420 frameBorder="0" allowFullScreen></iframe></center>
  
     </body>
 </html>
