--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <p>     
             
             You can ask up to two clues per task. You will not be able to return to the previous page, so make sure to write down all the necessary things before continuing. 
-        </>
-        
+        </p>
+        <iframe src="https://gifer.com/embed/Ao" width=420 height=360 frameBorder="0" allowFullScreen></iframe>
         <center><p1>
             <br>
             Good luck
