--- a/Pestaña_RamonyCajal.html
+++ b/Pestaña_RamonyCajal.html
@@ -14,6 +14,8 @@
     </h1>
     <p>
         So, you were looking for Ramon y Cajal's brain, right? We guess you are familiar with the following images. Oh, you aren't? Then, you will have to use your wits to solve this test.
+   <br> 
+        Save this for future reference: 5 ↑
     </p>
     <p1>
         <center><img src="https://github.com/laufdezlaura/Escape-Room-BHD.github.io/blob/main/Captura%20de%20pantalla%202021-11-09%20a%20las%2019.01.09.png?raw=true"
