--- a/Nonograms.html
+++ b/Nonograms.html
@@ -19,6 +19,9 @@
         <h1>
             Another kind of drawing
         </h1>
+        <p style="color: #085a75;">
+        Save this for future reference: 5 ↑
+        </p>
         <p>
             Those Cajal's drawings aren't the only piece of art in this room. Our security chief is an enthusiast of nonograms.
             Maybe the next password is encrypted with them...
