--- a/Hemisphere.html
+++ b/Hemisphere.html
@@ -12,6 +12,9 @@
     <h1>
         The language of mathematics
     </h1>
+        <p style="color: #085a75;">
+        Save this for future reference: 4 ←
+        </p>
     <p>
     We can't believe you made it up to here... But hey, don't get your hopes up because now it's getting tough. Let's see how you solve this!
     </p>
